# Pedro_Moreria_Costa_embarcatech_HBr_2025

./: README.md
PROJETOS/Monitoramento_temp/: CMakeLists.txt  README.md  temperatura_controle.c
PROJETOS/blink_modular/: CMakeLists.txt  README.md
PROJETOS/blink_modular/app/: main.c
PROJETOS/blink_modular/drivers/: led_embutido.c
PROJETOS/blink_modular/hal/: hal_led.c
PROJETOS/blink_modular/include/: hal_led.h  led_embutido.h
PROJETOS/contador_decrescente/: CMakeLists.txt  Contador_decrescente.c  README.md
PROJETOS/joystick/: CMakeLists.txt  README.md  joystick.c
PROJETOS/joystick/inc/: ssd1306.h
PROJETOS/test_unitario_temp/: README.md  temperatura_controle.c  temperatura_controle.h  test_temp.c
